syntax="proto3";

import "google/protobuf/empty.proto";

package grpc;

message AddBahanMenuReq{
    string namabahan=1;
    int32  quantity=2;
    int32 status=3;
    string createdby=4;
 
}

message ReadBahanMenuByNamaBahanMenuReq{
    string namabahan=1;
}


message ReadBahanMenuByNamaBahanMenuResp{
    int32   idbahan=1;
    string namabahan=2;
    int32  quantity=3;
    int32 status=4;
    string createdby=5;
}

message ReadBahanMenuResp{
    repeated ReadBahanMenuByNamaBahanMenuResp allBahanMenu=1;
}

message UpdateBahanMenurReq{
    int32   idbahan=1;
    string namabahan=2;
    int32  quantity=3;
    int32 status=4;
    string updateBy=5;
}
service BahanMenuService{
    rpc AddBahanMenu (AddBahanMenuReq) returns (google.protobuf.Empty){};
    rpc ReadBahanMenuByNamaBahanMenu(ReadBahanMenuByNamaBahanMenuReq) returns (ReadBahanMenuByNamaBahanMenuResp) {};
    rpc ReadBahanMenu(google.protobuf.Empty) returns (ReadBahanMenuResp){};
    rpc UpdateBahanMenu(UpdateBahanMenurReq) returns (google.protobuf.Empty){};

}